--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+[v1.2.1]
+*  Added ability to process BAM files generated from paired-end sequencing
+*  Cleaner reporting of missing assembly fragments in GATC files
+*  Some small bugs fixed
+*  General code clean-ups
+
 [v1.2]
 *  Completely re-written normalisation routine based on kernel density estimation
 *  Genomic coverage is now calculated internally rather than using bedtools (uses much less memory, is slightly faster, and drops the requirement for an external binned windows file)
