--- a/changelog
+++ b/changelog
@@ -1,3 +1,15 @@
+
+[v1.5.3]
+*  New feature: --coverage flag outputs coverage bedGraph track of each sample (useful with Dam-only tracks for CATaDa analysis).  --just_coverage exits after coverage tracks are written.
+*  New feature: Kernel density normalisation routines sped up ~10x via Inline::C.  This is enabled by default, but will only work if the Inline::C module is installed; damidseq_pipeline will fall back on the Perl coded routine if this is not present.  If you want to control explicitly, do so via the --kde_inline flag.
+*  New feature: ChIP-seq-specific processing routines added: --remdups removes PCR duplicates, --unique only maps unique reads.  Enable all of these with --chipseq (also turns of GATC-level binning, GATC-based read extension and will only output coverage tracks not ratios)
+*  New feature: New normalisation method, "rawbins".  This writes the normalisation data to TSV format and runs a user-provided script for custom normalisation.  Your script should read the data file and output the normalisation factor.  Advanced users only, use with caution.
+*  New feature: consider all occupancy as RPM (reads per million mapped reads), set as default.  Control with --scores_as_rpm flag.
+*  Changed: bowtie2 command handling refactored more elegantly
+*  Added: ability to add custom flags to bowtie2 command with --bowtie2_add_flags
+*  Fixed: small changes to read mapping code for more accurate mapping
+*  Changed: filename filters are now turned off by default (use --no_file_filters=0 to turn back on)
+
 [v1.4.6]
 *  New feature: paired-end reads are now handled natively at the fastq level.  Use the --paired flag to enable, and your paired reads should be automagically detected and aligned
 *  Changed: BAM file format is now used natively without SAM intermediates at all levels (also fixes the recent samtools version handling bug)
